--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.3.1",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
+    "fast-json-stable-stringify": "^2.1.0",
     "postcss": "^8.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
